--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
             <li>
                 <div class="date">2022 - Present</div> 
                 <div class="info">
-                     <p class="semi-bold">Bachelors of Engineering in IT </p> 
-                  <p>Have doing My Bachelors In SaiRam Engineering college</p>
+                     <p class="semi-bold">Masters of Engineering in cse </p> 
+                  <p>Have doing My Masters In SaiRam Engineering college</p>
                 </div>
             </li>
             <li>
